// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjk.md 1`] = `
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

`;

exports[`collapsed.md 1`] = `
[hello][]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello][]

`;

exports[`full.md 1`] = `
[hello][world]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello][world]

`;

exports[`shortcut.md 1`] = `
[hello]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello]

`;

exports[`title.md 1`] = `
[ref]: https://example.com (bar)
[other-ref]: https://example.com (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\""
[a]: https://example.com '\\"'
[a]: https://example.com (\\")

[a]: https://example.com "\\'"
[a]: https://example.com '\\''
[a]: https://example.com (\\')

[a]: https://example.com "\\'"
[a]: https://example.com '\\)'
[a]: https://example.com (\\))

<!-- mis-parsing, \`\\\` are missing: -->

[a]: https://example.com "\\\\\\""
[a]: https://example.com '\\\\\\''
[a] https://example.com (\\\\\\))

[a]: https://example.com "\\\\'"
[a]: https://example.com '\\\\"'
[a]: https://example.com (\\\\")

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[ref]: https://example.com "bar"
[other-ref]: https://example.com (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\"" [a]: https://example.com '\\"' [a]:
https://example.com (\\")

[a]: https://example.com "'"

[a]: https://example.com '\\'' [a]: https://example.com (\\')

[a]: https://example.com "'"
[a]: https://example.com ")"

[a]: https://example.com (\\))

<!-- mis-parsing, \`\\\` are missing: -->

[a]: https://example.com "\\\\\\"" [a]: https://example.com '\\\\\\'' [a]
https://example.com (\\\\\\))

[a]: https://example.com "'"
[a]: https://example.com '"'
[a]: https://example.com '"'

`;
